Wed May 13 06:51:57 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.cpp:

          Removed these files.

Wed May 13 06:47:23 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/TCPIP_Event_Handler.cpp:
        * cuts/arch/tcpip/TCPIP_OutputCDR.h:
        * cuts/arch/tcpip/TCPIP_OutputCDR.inl:
        * cuts/arch/tcpip/TCPIP_OutputCDR.cpp:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.cpp:
        * cuts/arch/tcpip/TCPIP_SPEC.h:
        * cuts/arch/tcpip/TCPIP_SPEC.cpp:

          . Improved the marshalling/unmarshalling code for events.

        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer_App.cpp:

          . Bug fix where all threads had not exited before the main
            application exited.

Wed May 13 06:23:03 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer_App.h:
        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer_App.cpp:
        * cuts/arch/tcpip/server/server.cpp:

          . Bug fix where the component server failed to exit when
            it received the shutdown notification.

Wed May 13 06:06:13 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer.cpp:
        * cuts/arch/tcpip/server/TCPIP_CCM_Container.h:
        * cuts/arch/tcpip/server/TCPIP_CCM_Container.cpp:

          . Implemented the methods invoked during shutdown.

        * cuts/arch/tcpip/TCPIP_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_T.cpp:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.h: