@@ -1,3 +1,10 @@
+Wed May 13 06:54:28 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * examples/arch/tcpip/HelloWorld/client.cpp:
+        * examples/arch/tcpip/HelloWorld/server.cpp:
+
+          Removed these files.
+
 Wed May 13 06:51:57 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.h:
